css/style.css
html {
  scroll-behavior: smooth;
}

body {
  font-family: "Poppins", sans-serif;
  font-size: 1rem;
  margin: 0;
}

.main-container {
  background-color: #22223b;
  width: 100%;
  height: 100vh;
  color: #ffffff;
  display: grid;
  place-content: center;
  text-align: center;
}

.hello {
  font-size: 3rem;
}

.name {
  font-size: 5rem;
  font-weight: 700;
  text-transform: uppercase;
}

.main-desc {
  font-size: 1.5rem;
  margin-top: 1em;
}

a {
  text-decoration: none;
  color: #ffffff;
  text-transform: uppercase;
  font-size: 1rem;
}
.main-buttons {
  display: flex;
  justify-content: center;
  gap: 1em;
  margin-top: 3em;
}

.resume-button,
.contact-button {
  width: 50%;
  padding: 1em;
  border: 2px solid;
  border-radius: 0.5em;
  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
}

.resume-button:hover,
.contact-button:hover {
  transform: scale(1.1);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.about-container {
  width: 100%;
  height: 100vh;
  display: grid;
  place-content: center;
  text-align: center;
  background-color: #ffffff;
  color: #000000;
}
.heading {
  font-size: 4rem;
  text-transform: uppercase;
  font-weight: 500;
}

.about-info {
  display: flex;
  justify-content: center;
  margin-top: 2em;
  gap: 1em;
}

.about-desc {
  width: 400px;
  text-align: justify;
  padding: 1em;
}

.contact-container {
  width: 400px;
  display: grid;
  padding: 1em;
  gap: 2em;
}

.github-logo {
  border: 2px solid;
  border-radius: 0.5em;
  width: 100%;
  display: grid;
  place-content: center;
  transition: transform 0.3s ease-in-out;
}

.github-logo:hover {
  transform: scale(1.1);
}

.linkedin-logo {
  width: 100%;
  border: 2px solid;
  border-radius: 0.5em;
  display: grid;
  place-content: center;
  transition: transform 0.3s ease-in-out;
}

.linkedin-logo:hover {
  transform: scale(1.1);
}

.icons {
  width: 100px;
  height: 100px;
  margin: 5px;
}

.skills-container {
  width: 100%;
  height: 100vh;
  background-color: #22223b;
  color: #ffffff;
  padding: 1em;
  display: grid;
  place-content: center;
  text-align: center;
}

.heading-skills {
  font-size: 4rem;
  text-transform: uppercase;
  font-weight: 500;
  margin-bottom: 0.5em;
}

.container {
  display: grid;
  grid-template-columns: repeat(5, 150px);
  grid-template-rows: repeat(3, 200px);
  place-content: center;
  gap: 2em;
}

.logo {
  height: 100%;
  width: 100%;
  background-color: #ffffff;
  display: grid;
  place-content: center;
  border-radius: 0.5em;
  transition: transform 0.3s ease-in-out;
}

.logo:hover {
  transform: scale(1.1);
}

img {
  width: 50px;
  height: 50px;
}
#project-section {
  display: grid;
  place-content: center;
  text-align: center;
  padding: 1em;
  align-items: center;
  /* background-color: #22223b; */
  /* color: #ffffff; */
}

.project-section {
  width: 100%;
  height: 100vh;
  display: grid;
  place-content: center;
  text-align: center;
  gap: 1em;
}

.project-card {
  display: grid;
  border: 2px solid;
  border-radius: 0.5em;
  width: 450px;
  height: auto;
  padding: 1em;
  background-color: #22223b;
  color: #ffffff;
  box-shadow: 2px 2px 2px 5px #000000;
}
.temp {
  display: flex;
  justify-content: center;
  gap: 1em;
}

.sub-heading {
  font-size: 2rem;
  margin-bottom: 0.5em;
}

.image {
  width: 100%;
  height: 100%;
  background-color: #ffffff;
  border-radius: 0.5em;
}

.desc {
  display: grid;
  text-align: justify;
  padding: 1em;
}

#contact-section {
  width: 100%;
  height: 100vh;
  background-color: #7d8ca3;
  display: grid;
  place-content: center;
  text-align: center;
}

.contact-container {
  width: auto;
  margin: 0;
}

form {
  display: grid;
  place-content: center;
  text-align: center;
  gap: 1em;
}
input {
  font-family: "Poppins", sans-serif;
  width: 400px;
  height: auto;
  font-size: 1rem;
  padding: 1em;
  border: 2px solid;
  border-radius: 0.5em;
  background-color: #22223b;
  color: #ffffff;
}

#message-box {
  height: 200px;
}
button {
  width: 100%;
  border: 2px solid;
  padding: 1em;
  border-radius: 0.5em;
  background-color: #22223b;
  color: #ffffff;
  margin-top: 2em;
  font-family: "Poppins", sans-serif;
}

button:hover {
  background-color: #ffffff;
  color: #000000;
}
.contact-heading {
  font-size: 2.5rem;
  font-weight: 500;
  color: #ffffff;
  margin-bottom: 1em;
}

#message-box {
  overflow: auto;
  resize: vertical;
}

@media only screen and (max-width: 600px) {
  .body {
    width: 100%;
    padding: 1em;
    margin: 0;
  }
  .main-container {
    width: 100%;
    height: 100vh;
    padding: 1em;
    background-color: #000000;
    display: grid;
    place-content: center;
    background: #242424; /* fallback for old browsers */
    background: #242424; /* fallback for old browsers */
    background: -webkit-linear-gradient(to top, #240b36, #c31432);
    background: linear-gradient(to top, #240b36, #c31432);
  }
  .main-container::after {
    filter: blur(4.5rem);
    animation: rotation 2s linear infinite;
  }
  @keyframes rotation {
    0% {
      transform: rotate(0);
    }
    50% {
      transform: rotate(90deg);
    }
    100% {
      transform: rotate(180deg);
    }
  }

  .hello {
    font-size: 2rem;
  }
  .name {
    font-size: 4rem;
  }
  .main-desc {
    font-size: 1.2rem;
  }
  .about-container {
    width: 100%;
    padding: 1em;
  }
  .contact-container {
    display: flex;
  }
  .icons {
    height: 100px;
    aspect-ratio: 1/1;
  }

  .about-info {
    display: grid;
  }
  .heading-skills {
    font-size: 2rem;
  }

  .skills-container {
    width: 100%;
  }

  .container {
    display: grid;
    place-content: center;
    grid-template-columns: repeat(3, 110px);
    grid-template-rows: repeat(5, 110px);
  }
  #project-section {
    width: 100%;
    display: grid;
    place-content: center;
    text-align: center;
    padding: 0;
    margin: 1em;
  }
  .project-section {
    width: 100%;
  }
  .project-card {
    display: grid;
    /* border: 2px solid; */
    border-radius: 0.5em;
    width: 450px;
    height: auto;
    padding: 1em;
    background-color: #ffffff;
    color: #000;
  }
  .heading {
    display: grid;
    text-align: center;
  }
  .temp {
    display: grid;
    gap: 1.5em;
  }
  .project-card {
    width: 350px;
    height: auto;
    box-shadow: none;
  }
  .desc {
    width: auto;
    padding: 1em 0;
  }
  .sub-heading {
    font-size: 1.5rem;
  }
  .project-section {
    height: 180vh;
  }
  #contact-section {
    width: 100%;
    padding: 1em;
    display: grid;
    place-content: center;
    text-align: center;
  }
  form {
    width: auto;
    padding: 1em;
  }

  input {
    width: auto;
  }
  .submit-button {
    width: auto;
    padding: 1em;
  }
  button {
    width: 200px;
  }
  .contact-heading {
    font-size: 2.5rem;
    font-weight: 500;
    color: #ffffff;
    margin-bottom: 1em;
  }
}

